[tool.poetry]
name = "langchain-experiments"
version = "0.1.0"
description = ""
authors = ["Konrad Wenc <konrad.wenc@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.0"
langchain = "^0.1.20"
jupyter = "^1.0.0"
beautifulsoup4 = "^4.12.3"
faiss-cpu = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
